<resources>
    <string name="app_name">AppSumativa</string>
    <string name="audioskins">Audioskin</string>
    <string name="titulo_bienvenido">Bienvenido</string>
    <string name="descripcion_bienvenido">Por favor, ingresa con tu información o crea un nuevo usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="email">ejemplo@gmail.com</string>
    <string name="password">Contraseña</string>
    <string name="logoaudio">logoAudio</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>

    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>

</resources>