<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="120dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logoaudio"
            android:src="@drawable/audio_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/audioskins"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />


    </LinearLayout>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cardCornerRadius="28dp"
    android:layout_marginBottom="-20dp"
    tools:ignore="VisualLintBounds">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_bienvenido"
            android:textColor="@color/my_primary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/descripcion_bienvenido"
            android:textColor="#2A2A2A" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <!-- Botones de Ingresar y Login -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistrar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dodger_blue_600"
                android:text="@string/registrarse"
                android:textColor="@android:color/white"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnIngresar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dodger_blue_600"
                android:text="@string/ingresar"
                android:textColor="@android:color/white"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>



</RelativeLayout>