<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".RegistroActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="24dp"/>

            <!-- Email -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Contraseña -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Nombre -->
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Apellido Paterno -->
            <EditText
                android:id="@+id/etApellidoPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/apellido_paterno"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Apellido Materno -->
            <EditText
                android:id="@+id/etApellidoMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/apellido_materno"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Teléfono -->
            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Dirección -->
            <EditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/direccion"
                android:inputType="textPostalAddress"
                android:padding="12dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />









            <!-- BOTON Registrarse -->
            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/my_primary"
                android:padding="12dp"
                android:text="@string/registrarse"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
